# Clause

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  ClauseGuard Playbook.docx  DECISIONS.md  Dockerfile  LICENSE  README.md  SKILLS.md  docker-compose.yml  pyproject.toml
data/: README.md
docs/: README.md
docs/bills/: README.md
docs/governance/: CLAUDE.md  README.md  SKILLS.md
docs/methodology/: 01_taxonomy.md  02_constitutional_module.md  03_scoring.md  04_labelling_guide.md  05_evidence_format.md
docs/project/: README.md  SPEC_01_STATUS.md  STEP_03_BILL_PARSER_STATUS.md  STEP_04_RETRIEVAL_STATUS.md
docs/reports/: methodology_paper.md  nita_bill_2025_public.md
frontend/: README.md
logs/: README.md
notebooks/: README.md
scripts/: README.md  _bootstrap.py  check_bill.py  check_index.py  check_reference.py  index_corpus.py  mirror_constitution_pdf.py  mirror_ghalii.md  mirror_ghalii.py  parse_bill.py  refresh_mirror.md  refresh_mirror.py  search_corpus.py
src/: README.md
src/clauseguard/: README.md  __init__.py
tests/: README.md
tests/parsing/: test_bill_parser.py  test_bill_smoke.py  test_clause_splitter.py  test_cli.py  test_pdf_extractor.py  test_references.py
tests/reference/: README.md  test_citation.py  test_constitution_pdf.py  test_ghalii_client.py  test_legislation_index.py  test_mirror.py  test_mirror_cli.py  test_parser_html.py  test_parser_xml.py  test_registry.py  test_resolver.py  test_smoke.py  test_smoke_cli.py
tests/retrieval/: test_chunkers.py  test_index_store_smoke.py  test_lexical_index.py  test_retrieval_cli.py  (+1 more)
(+389 files in other folders)
