[project]
name = "clauseguard"
version = "0.1.0"
description = "Evidence grounded legislative risk analysis for Ghana"
requires-python = ">=3.11"
dependencies = [
    "requests~=2.31",
    "beautifulsoup4~=4.12",
    "lxml~=5.1",
    "pydantic~=2.6",
    "pyparsing~=3.1",
    "pyyaml~=6.0",
    "rich~=13.7",
    "typer~=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-cov~=4.1",
    "pytest-mock~=3.12",
    "ruff~=0.3",
    "mypy~=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that call live external services",
]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["lxml", "lxml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
